	  file, using Ctrl-X from the search prompt and Meta-T from the
	  edit window.  New function do_cut_till_end().  Note that this
	  is disabled when NANO_SMALL is defined. (DLR, based on ideas
	  from a patch for Pico by Eduardo Chappa, suggested by Ryan
	  Dlugosz and Paul Adams)
	- Implement verbatim input for the statusbar prompt.  Changes to
	  do_statusbar_input(); new function
	  do_statusbar_verbatim_input(). (DLR)
- cut.c:
  do_cut_text()
	- If keep_cutbuffer is FALSE, only blow away the text in the
	  cutbuffer if the cutbuffer isn't empty. (DLR)
  do_uncut_text()
	- No longer duplicate Pico's adding an extra magicline to the
	  file if uncutting leaves the cursor on the current one.  This
	  behavior appears to be a bug, as inserting a file in the same
	  manner doesn't add an extra magicline. (DLR)
- files.c:
  get_full_path()
	- Remove unneeded NANO_SMALL #ifdef, so that it's included
	  whenever its prototype is, and so it can compile when
	  DISABLE_OPERATINGDIR isn't defined and NANO_SMALL is. (DLR)
- global.c:
  shortcut_init()
	- Fix misplaced #endif keeping the "Full Justify" shortcut in
	  the search shortcut list from being included when NANO_SMALL
	  is defined but DISABLE_JUSTIFY isn't. (DLR)
  thanks_for_all_the_fish()
	- Free the justify buffer if it isn't empty. (DLR)
- nano.c:
  do_toggle()
	- When we get the whitespace display toggle, update the titlebar
	  as well as the edit window, in case the filename displayed on
	  the titlebar contains spaces or tabs. (DLR)
  handle_sigwinch()
	- If the justify buffer isn't empty, blow it away and don't
	  display "UnJustify" in the shortcut list anymore. (DLR)
  do_wrap()
	- Make wrap_loc and word_back ssize_t's, to match fill. (DLR)
  break_line()
	- Fix compilation problem caused by its returning int when it
	  should return ssize_t according to its prototype. (Jeremy
	  Huddleston)
  do_justify()
	- For consistency, preserve placewewant if we didn't unjustify